<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jeopardy</string>
    <string name="hello_world">Welcome to Jeopardy!\n</string>
    <string name="action_settings">Settings</string>
    <string name="button1">Q1</string>
    <string name="button2">Q2</string>
    <string name="button3">Q3</string>
    <string name="button4">Q4</string>
    <string name="button5">Q5</string>
    <string name="button6">Q6</string>
    <string name="button7">Q7</string>
    <string name="button8">Q8</string>
    <string name="button9">Q9</string>
    <string name="button10">Q10</string>
    <string name="button11">Q11</string>
    <string name="button12">Q12</string>
    <string name="button13">Q13</string>
    <string name="button14">Q14</string>
    <string name="button15">Q15</string>
    <string name="button16">Q16</string>
    <string name="button17">Q17</string>
    <string name="button18">Q18</string>
    <string name="button19">Q19</string>
    <string name="button20">Q20</string>
    <string name="button21">Q21</string>
    <string name="button22">Q22</string>
    <string name="button23">Q23</string>
    <string name="button24">Q24</string>
    <string name="button25">Q25</string>
    <string name="button26">Q26</string>
    <string name="button27">Q27</string>
    <string name="button28">Q28</string>
    <string name="button29">Q29</string>
    <string name="button30">Q30</string>
    <string name="question1">Question 1</string>
    <string name="question2">Question 2</string>
    <string name="question3">Question 3</string>
    <string name="question4">Question 4</string>
    <string name="question5">Question 5</string>
    <string name="question6">Question 6</string>
    <string name="question7">Question 7</string>
    <string name="question8">Question 8</string>
    <string name="question9">Question 9</string>
    <string name="question10">Question 10</string>
    <string name="question11">Question 11</string>
    <string name="question12">Question 12</string>
    <string name="question13">Question 13</string>
    <string name="question14">Question 14</string>
    <string name="question15">Question 15</string>
    <string name="question16">Question 16</string>
    <string name="question17">Question 17</string>
    <string name="question18">Question 18</string>
    <string name="question19">Question 19</string>
    <string name="question20">Question 20</string>
    <string name="question21">Question 21</string>
    <string name="question22">Question 22</string>
    <string name="question23">Question 23</string>
    <string name="question24">Question 24</string>
    <string name="question25">Question 25</string>
    <string name="question26">Question 26</string>
    <string name="question27">Question 27</string>
    <string name="question28">Question 28</string>
    <string name="question29">Question 29</string>
    <string name="question30">Question 30</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>

</resources>
