<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/hello_world"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <Button
        android:layout_width="0dp"
        android:layout_weight=".16"
        android:layout_height="wrap_content"
        android:text="@string/button1" />

    <Button
        android:layout_width="0dp"
        android:layout_weight=".16"
        android:layout_height="wrap_content"
        android:text="@string/button2" />

    <Button
        android:layout_width="0dp"
        android:layout_weight=".16"
        android:layout_height="wrap_content"
        android:text="@string/button3" />

    <Button
        android:layout_width="0dp"
        android:layout_weight=".16"
        android:layout_height="wrap_content"
        android:text="@string/button4" />

    <Button
        android:layout_width="0dp"
        android:layout_weight=".16"
        android:layout_height="wrap_content"
        android:text="@string/button5" />

    <Button
        android:layout_width="0dp"
        android:layout_weight=".16"
        android:layout_height="wrap_content"
        android:text="@string/button6" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button7" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button8" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button9" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button10" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button11" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button12" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button13" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button14" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button15" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button16" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button17" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button18" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button19" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button20" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button21" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button22" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button23" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button24" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button25" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button26" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button27" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button28" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button29" />

        <Button
            android:layout_width="0dp"
            android:layout_weight=".16"
            android:layout_height="wrap_content"
            android:text="@string/button30" />
    </LinearLayout>


</LinearLayout>
